<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main Menu Strings -->
    <string name="from_book_button">Book Apps</string>
    <string name="from_spreadsheet_button">Android Exercise Apps</string>
    <string name="exit_button">Exit</string>
    <string name="dev_name">by John Ernest Guadalupe</string>
    <string name="back_button">Back</string>
    <string name="book_app1">1. GeoQuiz(Chapter 1 &#8211; 6)</string>
    <string name="book_app2">2. CriminalIntent(Chapter 7 &#8211; 12) (Chapter 16 &#8211; 22)</string>
    <string name="book_app3">3. HelloMoon(Chapter 13 &#8211; 15)</string>
    <string name="book_app4">4. NerdLauncherActivity(Chapter 23)</string>
    <string name="book_app5">5. RemoteControlActivity(Chapter 24 &#8211; 25)</string>
    <string name="book_app6">6. PhotoGalleryActivity(Chapter 26 &#8211; 31)</string>
    <string name="book_app7">7. DragAndDrawActivity(Chapter 32)</string>
    <string name="book_app8">8. RunActivity(Chapter 33 &#8211; 36)</string>

    <!-- Android Exercises Strings -->
    <string name="exer1_3">1. Layout Elements, \n 2. Input Controls\n\t\t(Button, TextField, Picker), \n 3. 1 View \n 4. Simple Menu \n 5. Create Context Menu \n 6. Create AlertDialog \n 7. JSONParsing</string>
    <string name="dialog_ok_cancel">Are you sure you want to exit?</string>

    <!-- GeoQuiz Strings -->
    <!-- Chapter 1 -4 -->
    <string name="geoquiz">GeoQuiz</string>
    <string name="app_name">Android Training</string>
    <string name="action_settings">Settings</string>
    <string name="question_text">Constantinople is the largest city in Turkey</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Prev</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="question_oceans">The Pacific Ocean is larger than
		the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea
		and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river
		in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest
		freshwater lake.</string>
    <string name="title_activity_main_menu">Main Menu Activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_book_apps">Book Apps Activity</string>
    <string name="title_activity_exercise_apps">Exercise Apps Activity</string>
    <!-- Chapter 5 - 6 -->
    <string name="cheat_button">Cheat!</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="judgment_toast">Cheating is wrong.</string>
    <string name="title_activity_ch5___cheat">Ch5__CheatActivity</string>
    <string name="title_activity_crime">CrimeActivity</string>

    <!-- Criminal Intent Strings -->
    <!-- Chapter 7 - 8 -->
    <string name="crime_title_hint">Enter a title for the crime</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved?</string>

    <!-- Chapter 9 - -->
    <string name="crimes_title">Crimes</string>

    <!-- Chapter 12 -->
    <string name="date_picker_title">Date of crime:</string>
    <string name="time_picker_title">Time of crime:</string>
    <string name="cancel_button">Cancel</string>

    <!-- Chapter 13 -->
    <string name="title_activity_hello_moon">HelloMoon</string>
    <string name="hellomoon_play">Play</string>
    <string name="hellomoon_pause">Pause</string>
    <string name="hellomoon_resume">Resume</string>
    <string name="hellomoon_stop">Stop</string>
    <string name="hellomoon_description">Neil Armstrong stepping onto the moon</string>

    <!-- Chapter 16 -->
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle">If you see something, say something.</string>
    <string name="delete_crime">Delete</string>

    <!-- Chapter 20 -->
    <string name="take">Take!</string>

    <!-- Chapter 21 -->
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">There is no suspect.</string>
    <string name="crime_report_suspect">The suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="title_activity_nerd_launcher">NerdLauncher</string>
    <string name="title_activity_remote_control_actvity">RemoteControlActvity</string>
    <string name="title_activity_photo_gallery">PhotoGalleryActivity</string>

    <!-- Chapter 28 -->
    <string name="search_hint">Search Flickr</string>
    <string name="search">Search</string>
    <string name="clear_search">Clear Search</string>

    <!-- Chapter 29 -->
    <string name="start_polling">Poll for new pictures</string>
    <string name="stop_polling">Stop polling</string>
    <string name="new_pictures_title">New PhotoGallery Pictures</string>
    <string name="new_pictures_text">You have new pictures in PhotoGallery.</string>
    <string name="title_activity_drag_and_draw">DragAndDrawActivity</string>
    <string name="title_activity_run_tracker">RunTracker</string>
    <string name="title_activity_run">RunActivity</string>

    <!-- Chapter 33 -->
    <string name="started">Started:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="altitude">Altitude:</string>
    <string name="elapsed_time">Elapsed Time:</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="gps_enabled">GPS Enabled</string>
    <string name="gps_disabled">GPS Disabled</string>
    <string name="cell_text">Run at %1$s</string>
    <string name="title_activity_run_list">RunListActivity</string>
    
	<!-- Chapter 34 -->
	<string name="new_run">New Run</string>
	
	<!-- Chapter 36 -->
	<string name="map">Map</string>
	<string name="run_start">Run Start</string>
	<string name="run_started_at_format">Run started at %s</string>
	<string name="run_finish">Run Finish</string>
	<string name="run_finished_at_format">Run finished at %s</string>
</resources>